--- a/components/Loader/Loader.module.css
+++ b/components/Loader/Loader.module.css
@@ -11,6 +11,17 @@
   justify-content: center;
 }
 
+.loaderContainerLg {
+  position: fixed;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.516);
+  backdrop-filter: blur(2px);
+  z-index: 9999;
+}
+
 .loader {
   position: relative;
   height: 50px;
